2025-02-07 Se configura idea de mejora para productivo.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -883,7 +883,7 @@
                                         )
                                     {
                                         <li class="@(!nav_sm && ViewBag.PrimerNivel == "ideas_mejora" ? "active" : null )">
-                                            <a><i class="fa  fa-lightbulb fa-spin-pulse"></i> Ideas de Mejora<span class="fa fa-chevron-down"></span></a>
+                                            <a><i class="fa  fa-lightbulb "></i> Ideas de Mejora<span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(!nav_sm && ViewBag.PrimerNivel == "registro_unidades" ? "display:block" : null )">
                                                 <li class="@(!nav_sm && ViewBag.SegundoNivel == "menu_idea" ? "current-page" : null )"><a href="@Url.Action( "Index", "MejoraContinua")">Captura tu idea</a></li>
                                             </ul>
