--- a/CódigoFuente/BitacorasProduccion/Views/MejoraContinua/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/MejoraContinua/Index.cshtml
@@ -44,7 +44,7 @@
                 Hola, ¡Bienvenido a tu portal de Ideas de Mejora Continua!
             </h2>
             <p style="font-size: 16px ; padding-bottom:20px">
-                En <b>thyssenkrupp</b>, valoramos tu visión y creatividad. Este espacio está diseñado para que compartas tus ideas de mejora y contribuyas al desarrollo continuo de nuestra empresa. Tu participación es fundamental para impulsar la innovación y optimizar nuesrtros procesos.
+                En <b>thyssenkrupp</b>, valoramos tu visión y creatividad. Este espacio está diseñado para que compartas tus ideas de mejora y contribuyas al desarrollo continuo de nuestra empresa. Tu participación es fundamental para impulsar la innovación y optimizar nuestros procesos.
                 ¡Animate a proponer tus ideas y se parte del futuro de tkMM!
             </p>
         </div>
