--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditarSolicitud.cshtml
@@ -1942,6 +1942,7 @@
                 width: '100%',
                 height: 'auto',
                 readOnly: true,
+                contextMenu: ['copy'],
                 cells: function (row, col) {
                     let cp = {}
                     if (col === porcentajeCol) {
@@ -2136,6 +2137,7 @@
                     ], //contains ID
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
@@ -2342,6 +2344,7 @@
                 },
                 licenseKey: 'non-commercial-and-evaluation',
                 rowHeaders: true,
+                contextMenu: ['copy'],
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
@@ -2637,13 +2640,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -2761,6 +2764,7 @@
                      return cellProperties;
                  },
                  licenseKey: 'non-commercial-and-evaluation',
+                 contextMenu: ['copy'],
                  rowHeaders: true,
                  autoColumnSize: true,
                  //width: '100%',
@@ -2959,13 +2963,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -3137,13 +3141,13 @@
                 },
 
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -3247,13 +3251,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -3343,13 +3347,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -3474,13 +3478,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -3574,13 +3578,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
@@ -3713,13 +3717,13 @@
                     return cellProperties;
                 },
                 licenseKey: 'non-commercial-and-evaluation',
+                contextMenu: ['copy'],
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
                 height: 'auto',
                 readOnly: true,
                 manualColumnResize: true,
-                licenseKey: 'non-commercial-and-evaluation',
 
             });
 
